src/objects/Requirement_Item__c.object
<CustomObject>
    <description>An item that&apos;s part of an admissions requirement.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Checked if this requirement item is active. If unchecked, it will not display on any applications.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allow_Text_Entry__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Whether or not text entry is allowed for this document upload item</inlineHelpText>
        <label>Allow Text Entry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Applicant_Type__c</fullName>
        <inlineHelpText>Applicant type(s) that this requirement item applies to (applies to all if blank)</inlineHelpText>
        <label>Applicant Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Applicant_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_Status__c</fullName>
        <inlineHelpText>Application status(es) that this requirement item applies to (applies to all if blank)</inlineHelpText>
        <label>Application Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Citizenship__c</fullName>
        <inlineHelpText>Citizenship type(s) that this requirement item applies to (applies to all if blank)</inlineHelpText>
        <label>Citizenship</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Citizenship_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Degree_Type__c</fullName>
        <inlineHelpText>Degree type(s) that this requirement item applies to (applies to all if blank)</inlineHelpText>
        <label>Degree Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Degree_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Delivery_Type__c</fullName>
        <inlineHelpText>Delivery type(s) that this requirement item applies to (applies to all if blank)</inlineHelpText>
        <label>Delivery Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Delivery_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Display_Order__c</fullName>
        <inlineHelpText>Order this requirement item is displayed relative to other requirement items</inlineHelpText>
        <label>Display Order</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Editable_Application_Status__c</fullName>
        <inlineHelpText>Application status(es) that this requirement item can be edited on (applies to all if blank)</inlineHelpText>
        <label>Editable Application Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>File_Types__c</fullName>
        <inlineHelpText>Types of files this document upload allows</inlineHelpText>
        <label>File Types</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PDF</fullName>
                </value>
                <value>
                    <fullName>DOC</fullName>
                </value>
                <value>
                    <fullName>TXT</fullName>
                </value>
                <value>
                    <fullName>RTF</fullName>
                </value>
                <value>
                    <fullName>JPG</fullName>
                </value>
                <value>
                    <fullName>PNG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Holding_Record_Id__c</fullName>
        <inlineHelpText>ID of the record to tie a related object to while a new record is reviewed</inlineHelpText>
        <label>Holding Record Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Instructions__c</fullName>
        <inlineHelpText>Instructions to complete this requirement item. Displayed at the top of the screen. This field accepts HTML.</inlineHelpText>
        <label>Instructions</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Intended_Program_Codes__c</fullName>
        <description>Intended program codes that this requirement applies to (applies to all if blank)</description>
        <inlineHelpText>Intended program codes that this requirement applies to (applies to all if blank)</inlineHelpText>
        <label>Intended Program Codes</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Program_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Intended_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Intended Program that this requirement item applies to (applies to all if blank)</inlineHelpText>
        <label>Intended Program</label>
        <referenceTo>Program__c</referenceTo>
        <relationshipLabel>Requirement Items</relationshipLabel>
        <relationshipName>Requirement_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Only_Applicant_Instructions__c</fullName>
        <description>Instructions that display to the applicant when the user accesses an Internal Only Requirement Item. Displayed at the top of the screen. This field accepts HTML.</description>
        <inlineHelpText>Instructions that display to the applicant when the user accesses an Internal Only Requirement Item. Displayed at the top of the screen. This field accepts HTML.</inlineHelpText>
        <label>Internal Only Applicant Instructions</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Internal_Only_Show_on_Checklist__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this requirement item will show on the checklist even if it&apos;s internal-only. The applicant will not be able to view answers for this requirement item, but will be able to see if it&apos;s been satisfied or not.</description>
        <inlineHelpText>If checked, this requirement item will show on the checklist even if it&apos;s internal-only. The applicant will not be able to view answers for this requirement item, but will be able to see if it&apos;s been satisfied or not.</inlineHelpText>
        <label>Internal Only Show on Checklist</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checked if this requirement item can only be fulfilled by an internal user.</inlineHelpText>
        <label>Internal Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Internal_Requirement_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If this requirement item is being asked to an external user (e.g. a recommender), this field looks-up to the corresponding internal requirement item that the applicant fulfills (e.g. recommender name and email)</inlineHelpText>
        <label>Internal Requirement Item</label>
        <referenceTo>Requirement_Item__c</referenceTo>
        <relationshipLabel>External Requirement Items</relationshipLabel>
        <relationshipName>External_Requirement_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <description>The label of this requirement item. If left blank, the name is used.</description>
        <inlineHelpText>The label of this requirement item. If left blank, the name is used.</inlineHelpText>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Number_of_Children__c</fullName>
        <description>The maximum number of related records that an applicant can add. Unlimited if blank.</description>
        <inlineHelpText>The maximum number of related records that an applicant can add. Unlimited if blank.</inlineHelpText>
        <label>Maximum Number of Children</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Related_List_Object_Master_Field__c</fullName>
        <inlineHelpText>API name of the field that the related object uses to look-up to another object (e.g. Contact__c)</inlineHelpText>
        <label>Related List Object Master Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_List_Object_Master__c</fullName>
        <inlineHelpText>Object that the related object looks-up to</inlineHelpText>
        <label>Related List Object Master</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Applicant</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Contact</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_List_Object__c</fullName>
        <inlineHelpText>Object that this related object requirement item is populating</inlineHelpText>
        <label>Related List Object</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Education_History__c</fullName>
                </value>
                <value>
                    <fullName>Extracurricular_Activity__c</fullName>
                </value>
                <value>
                    <fullName>Family_Member__c</fullName>
                </value>
                <value>
                    <fullName>Employment_History__c</fullName>
                </value>
                <value>
                    <fullName>Test_Score__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_List_Where_Clause__c</fullName>
        <inlineHelpText>SOQL WHERE clause to filter existing data that gets displayed to an applicant (e.g. only High Schools get displayed from the full Education History)</inlineHelpText>
        <label>Related List Where Clause</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Required_Number_of_Children__c</fullName>
        <inlineHelpText>The minimum number of records that need to be populated to satisfy this requirement item (e.g. at least one high school is required for freshman)</inlineHelpText>
        <label>Required Number of Children</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Required__c</fullName>
        <inlineHelpText>Application status(es) that this requirement is required for (applies to none if blank)</inlineHelpText>
        <label>Required</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Application_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Requirement__c</fullName>
        <inlineHelpText>Requirement that this item is a part of</inlineHelpText>
        <label>Requirement</label>
        <referenceTo>Requirement__c</referenceTo>
        <relationshipLabel>Requirement Items</relationshipLabel>
        <relationshipName>Requirement_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Residency__c</fullName>
        <inlineHelpText>Residency type that this requirement item applies to (applies to all if blank)</inlineHelpText>
        <label>Residency</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Residency_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_College__c</fullName>
        <inlineHelpText>School/College that this requirement item applies to (applies to all if blank)</inlineHelpText>
        <label>School / College</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>School_College</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Student_Type__c</fullName>
        <inlineHelpText>Student type(s) that this requirement item applies to (applies to all if blank)</inlineHelpText>
        <label>Student Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Student_Types</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Viewing_Requirement_Formula__c</fullName>
        <description>Determines if this requirement item must be viewed or not. Returns true if viewing requirement is checked on either the parent requirement or this requirement item</description>
        <formula>Viewing_Requirement__c || Requirement__r.Viewing_Requirement__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Viewing Requirement Formula</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Viewing_Requirement__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines whether an applicant must view this requirement item before submission is allowed</description>
        <label>Viewing Requirement</label>
        <type>Checkbox</type>
    </fields>
    <label>Requirement Item</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Requirement__c</columns>
        <columns>Student_Type__c</columns>
        <columns>School_College__c</columns>
        <columns>Degree_Type__c</columns>
        <columns>Instructions__c</columns>
        <columns>Citizenship__c</columns>
        <columns>Residency__c</columns>
        <columns>Display_Order__c</columns>
        <columns>Allow_Text_Entry__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Requirement Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Requirement Items</pluralLabel>
    <recordTypes>
        <fullName>Document_Upload</fullName>
        <active>true</active>
        <description>Document to upload.</description>
        <label>Document Upload</label>
    </recordTypes>
    <recordTypes>
        <fullName>Question_Group</fullName>
        <active>true</active>
        <description>Group of questions.</description>
        <label>Question Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>Related_Object</fullName>
        <active>true</active>
        <label>Related Object</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>